--- a/src/Blatt_9/a092.md
+++ b/src/Blatt_9/a092.md
@@ -52,3 +52,51 @@ jaeger(X):-jagt(X, _), not(jagt(_, X)).
 ?{¬beute_und_jaeger(katze)}
 
 ```
+2: Anfrage 1
+?- beute_und_jaeger(katze).
+- {¬beute_und_jaeger(katze)}
+- {¬jagt(X, Y), ¬jagt(Z, X), beute_und_jaeger(X)}
+- {¬jagt(katze, Y), ¬jagt(Z, katze)}   
+
+Faktenprüfung:
+- jagt(katze, maus) -> ¬jagt(katze, Y) ist falsch
+- jagt(hund, katze) -> ¬jagt(Z, katze) ist falsch
+
+?- beute_und_jaeger(katze). -> true.
+
+Anfrage 2: 
+?- beute(X).
+- {¬beute(X)}
+- {¬tier(X), ¬jagt(Y, X), beute(X)}
+- {¬tier(X), ¬jagt(Y, X)}
+
+Versuch mit X = maus:
+- tier(maus) ∈ Basis ✅
+- jagt(katze, maus) ∈ Basis ⇒ jagt(Y, maus) ist erfüllbar
+
+X=maus
+
+
+```prolog
+
+tier(drache).
+tier(maus).
+tier(katze).
+tier(hund).
+
+jagt(drache, hund).
+jagt(drache, katze).
+jagt(hund, katze).
+jagt(katze, maus).
+
+% Правила
+beute(X) :- tier(X), jagt(_, X).
+jaeger(X) :- jagt(X, _), \+ jagt(_, X).
+beute_und_jaeger(X) :- jagt(X, _), jagt(_, X).
+
+:- initialization(main).
+
+main :-
+  % (beute_und_jaeger(katze) -> write('=> TRUE') ; write('=> FALSE')).
+  (beute(X), write(X), false ; true).
+```
