--- a/src/Blatt_9/a092.md
+++ b/src/Blatt_9/a092.md
@@ -1,24 +1,3 @@
-```prolog
-tier(drache).
-tier(maus).
-tier(katze).
-tier(hund).
-tier(schlange).
-tier(adler).
-
-jagt(katze, maus).
-jagt(adler, maus).
-jagt(schlange, maus).
-jagt(drache, hund).
-jagt(hund, katze).
-jagt(adler, schlange).
-jagt(drache, adler).
-
-beute_und_jaeger(X):-jagt(X, _), jagt(_, X).
-beute(X):-tier(X),jagt(_, X).
-jaeger(X):-jagt(X, _), not(jagt(_, X)). 
-```
-
 ### 1.
 ```prolog
 {
@@ -71,7 +50,7 @@ Anfrage 2:
 - {¬tier(X), ¬jagt(Y, X)}
 
 Versuch mit X = maus:
-- tier(maus) ∈ Basis ✅
+- tier(maus) ∈ Basis
 - jagt(katze, maus) ∈ Basis ⇒ jagt(Y, maus) ist erfüllbar
 
 X=maus
@@ -89,7 +68,6 @@ jagt(drache, katze).
 jagt(hund, katze).
 jagt(katze, maus).
 
-% Правила
 beute(X) :- tier(X), jagt(_, X).
 jaeger(X) :- jagt(X, _), \+ jagt(_, X).
 beute_und_jaeger(X) :- jagt(X, _), jagt(_, X).
